# coq-lsp

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  AUTHORS.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODIFY.md  Makefile  README.md  coq-lsp.opam  default.nix  dune  dune-project  flake.nix  index.html  todo.org
atom/: package-lock.json  package.json
compiler/: args.ml  cc.ml  compile.ml  driver.ml  dune  fcc.ml  fcc.mli  output.ml  output.mli  util.ml  util.mli
controller/: cache.ml  config.ml  coq_ast.ml  coq_ast.mli  coq_doc.ml  coq_doc.mli  coq_init.ml  coq_init.mli  coq_interp.ml  coq_interp.mli  coq_lsp.ml  coq_lsp.mli  coq_protect.ml  coq_protect.mli  coq_state.ml  coq_state.mli  coq_util.ml  coq_util.mli  doc_manager.ml  doc_manager.mli  dune  lsp_base.ml  lsp_core.ml  lsp_core.mli  lsp_interp.ml  lsp_interp.mli  lsp_io.ml  lsp_util.ml  lsp_util.mli  memo.ml  memo.mli  nt_cache_trim.ml  nt_cache_trim.mli  perf.ml  perf.mli  request.ml  request.mli  requests.ml  requests.mli  rq_action.ml  (+27 more)
controller-js/: README.md  coq_lsp_worker.ml  coq_lsp_worker.mli  dune  jsso.ml  jsso.mli  my_dynload.ml  my_dynload.mli
controller-js/js_stub/: coq_vm.js  interrupt.js  unix.js
coq/: args.ml  args.mli  ast.ml  ast.mli  compat.ml  compat.mli  dune  files.ml  files.mli  glob.ml  glob.mli  goals.ml  goals.mli  init.ml  init.mli  internal.ml  interp.ml  interp.mli  library_file.ml  library_file.mli  limits.ml  limits.mli  limits_mp_impl.fake.ml  limits_mp_impl.real.ml  loader.ml  loader.mli  message.ml  message.mli  module.ml  module.mli  parse.ml  parse.mli  parsing.ml  parsing.mli  print.ml  print.mli  protect.ml  protect.mli  save.ml  save.mli  (+10 more)
coq-layout-engine/: README.md  boxModel.ml  boxModel.mli  coq_util.ml  coq_util.mli  dune  term.ml  term.mli
coq-lsp/: index.html
coq/limits/: dune  limits.ml
dune-ex/: _CoqProject  a.v  b.v  dune
etc/: 0001-coq-lsp-patch.patch  0001-engine-trampoline.patch  0001-jscoq-lib-system.ml-de-unix-stat.patch  0001-ocaml-4-12.patch  ContributionIdeas.md  FAQ.md  META.threads  SerAPI.md  completion_symbols.json  jscoq-patch-2.diff  jscoq-patch.diff  todo.org
examples/: Demo.v  ItHolds.v  Ltac2_plugin.v  MetaCommands.v  Pff.v  Rtrigo1.v  T2048.v  ali_implicit.v  ast_loc.v  bug_18735.v  codeAction.v  comments_end.v  coreact.mv  cudw2023demo.mv  display_large.v  doc_hover.v  documentSymbol.v  err_shift.v  ex0.v  ex1.v  exerciseTest.wpn  fail_csdp.v  gcrash.v  goals.v  goals_weird.v  hover.v  int_tc_loop.v  jason_bug_1036_v1.v  jason_bug_1036_v2.v  lists.mv  lists.v.tex  ltac2_simple.v  modα.v  obligations.v  parsing_tests.v  pbroken.v  petanque.v  print_univs.v  qed_lex.v  record_print.v  (+7 more)
fleche/: compat.ml  compat.mli  config.ml  config.mli  contents.ml  contents.mli  coq_utils.ml  coq_utils.mli  debug.ml  doc.ml  doc.mli  dune  info.ml  info.mli  io.ml  io.mli  lang.ml  lang.mli  lang_intf.ml  memo.ml  memo.mli  perf.ml  perf.mli  perf_analysis.ml  perf_analysis.mli  progress.ml  serverInfo.ml  span.ml  span.mli  stats.ml  stats.mli  theory.ml  theory.mli  types.ml  types.mli  utf8.ml  utf8.mli  version.ml  version.mli
irmin/: api.ml  api.mli  dune  test.ml
lang/: ast.ml  ast.mli  compat.ml  compat.mli  diagnostic.ml  diagnostic.mli  dune  lUri.ml  lUri.mli  point.ml  point.mli  qf.ml  qf.mli  range.ml  range.mli  utf.ml  utf.mli  utf_tests.ml  with_range.ml
lsp/: base.ml  base.mli  core.ml  core.mli  debug.ml  doc.ml  doc.mli  dune  io.ml  io.mli  jCoq.ml  jFleche.ml  jFleche.mli  jLang.ml  jLang.mli  jStdlib.ml  log.ml  log.mli  workspace.ml  workspace.mli
lsp-server/jsoo/: README.md  coq_lsp_worker.ml  dune  jsso.ml
lsp-server/jsoo/js_stub/: coq_vm.js
lsp-server/wasm/: README.md  core.ts  dune  esbuild.mjs  interrupt.ts  ocaml_exec.ts  package-lock.json  package.json  tsconfig.json  wacoq_worker.ml  wacoq_worker.ts
lsp-server/wasm/shims/: buffer-shim.js
petanque/: README.md  agent.ml  agent.mli  dune  notations.ml  notations.mli  pet.ml  shell.ml  shell.mli
petanque/json_shell/: client.ml  client.mli  dune  interp.ml  interp.mli  interp_shell.ml  interp_shell.mli  jAgent.ml  obj_map.ml  pet.ml  protocol.ml  protocol_shell.ml  server.ml  shell.ml  shell.mli  state.ml  state.mli  utils.ml
petanque/test/: basic_api.ml  dune  json_api.ml  json_api_failure.ml  test.v
plugins/: README.md
serlib/: README.md  dune  serType.mli  ser_attributes.ml  ser_cAst.mli  ser_cPrimitives.ml  ser_class_tactics.ml  ser_class_tactics.mli  ser_constr.ml  ser_constr.mli  ser_constr_matching.mli  ser_constrexpr.ml  ser_constrexpr.mli  ser_context.ml  ser_declarations.ml  ser_declarations.mli  ser_declaremods.ml  ser_declaremods.mli  ser_decls.ml  ser_deprecation.ml  ser_eConstr.mli  ser_entries.ml  ser_environ.ml  ser_environ.mli  ser_evaluable.ml  ser_evar_kinds.ml  ser_extend.ml  ser_extend.mli  ser_feedback.ml  ser_feedback.mli  ser_flags.ml  ser_float64.ml  ser_genarg.ml  ser_genarg.mli  ser_genintern.ml  ser_genintern.mli  ser_geninterp.mli  ser_genredexpr.ml  ser_genredexpr.mli  ser_gentactic.ml  (+69 more)
serlib/plugins/firstorder_core/: dune
serlib/plugins/ltac2_ltac1/: dune  ser_tac2core_ltac1.ml
serlib/plugins/micromega_core/: dune
serlib/plugins/nsatz_core/: dune
serlib/plugins/ssrmatching/: dune
serlib_8_17/serlib/plugins/syntax/: dune  ser_g_number_syntax.ml  ser_number.ml
serlib_8_18/serlib/plugins/ssr/: dune  ser_ssrast.ml  ser_ssrequality.ml  ser_ssrparser.ml  wrap_ssrast.ml
serlib_8_19/: README.md  dune  serType.ml  ser_cMap.ml  ser_cMap.mli  ser_cPrimitives.ml  ser_cSet.ml  ser_cSet.mli  ser_cUnix.ml  ser_constr.ml  ser_constr.mli  ser_constrexpr.ml  ser_constrexpr.mli  ser_context.ml  ser_context.mli  ser_conv_oracle.mli  ser_cooking.mli  ser_coqargs.ml  ser_dAst.ml  ser_dAst.mli  ser_declarations.ml  ser_declarations.mli  ser_declaremods.ml  ser_deprecation.ml  ser_eConstr.ml  ser_eConstr.mli  ser_entries.ml  ser_evd.mli  (+42 more)
test/serlib/genarg/: case.v  dune  extraction.v  functional_induction.v  hint_rewrite.v  libTactics.v  mbid.v  move.v  now.v  primitives.v  setoid_rewrite.v  test_roundtrip.in
(+1495 files in other folders)
