synopsis: "Language Server Protocol native server for Coq"
description:
"""
Language Server Protocol native server for Coq
"""
opam-version: "2.0"
maintainer: "e@x80.org"
bug-reports: "https://github.com/ejgallego/coq-lsp/issues"
homepage: "https://github.com/ejgallego/coq-lsp"
dev-repo: "git+https://github.com/ejgallego/coq-lsp.git"
authors: [
  "Emilio Jesús Gallego Arias <e@x80.org>"
  "Ali Caglayan <alizter@gmail.com>"
  "Shachar Itzhaky <shachari@cs.technion.ac.il>"
  "Ramkumar Ramachandra <r@artagnon.com>"
]
license: "LGPL-2.1-or-later"
doc: "https://ejgallego.github.io/coq-lsp/"

depends: [
  "ocaml"        { >= "4.11.0" }
  "dune"         { >= "3.5.0"  }

  # lsp dependencies
  "cmdliner"     { >= "1.1.0" }
  "yojson"       { >= "1.7.0" }
  "uri"          { >= "4.2.0" }
  "dune-build-info" { >= "3.2.0" }

  # waterproof parser
  "menhir"       { >= "20220210" }

  # unit testing
  "ppx_inline_test"     { >= "0.14.1" }

  # Uncomment this for releases
  "coq"          { >= "8.18" < "8.19"  }
  "coq-serapi"   { >= "8.18" < "8.19"  }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
