(library
 (name controller)
 (public_name coq-lsp.controller)
 (modules :standard \ coq_lsp)
 ; Unfortunate we have to link the STM due to the LTAC plugin
 ; depending on it, we should fix this upstream
 (libraries coq-core.vernac coq-core.stm coq-serapi.serlib
   coq-serapi.sertop_v8_12 threads lsp cmdliner))

(executable
 (name coq_lsp)
 (modules coq_lsp)
 (public_name coq-lsp)
 (link_flags -linkall)
 (libraries controller))
