; Should we move this to Fleche?

(library
 (name request)
 (public_name coq-lsp.request)
 (modules request)
 (wrapped false)
 (libraries coq fleche))

(library
 (name controller)
 (modules :standard \ request coq_lsp)
 (libraries
  coq
  fleche
  request
  petanque
  petanque_json
  fleche_lsp
  dune-build-info))

(executable
 (name coq_lsp)
 (modules coq_lsp)
 (public_name coq-lsp)
 (link_flags -linkall)
 (libraries controller threads cmdliner))
