; Should we move this to Fleche?

(library
 (name request)
 (public_name coq-lsp.request)
 (modules request)
 (wrapped false)
 (libraries coq fleche))

(library
 (name controller)
 (modules :standard \ request)
 (libraries
  coq
  fleche
  request
  petanque
  petanque_json
  fleche_lsp
  dune-build-info))
