(library
 (name petanque_json)
 (public_name coq-lsp.petanque.json)
 (modules :standard \ pet server)
 (preprocess
  (staged_pps ppx_import ppx_deriving_yojson))
 (libraries lsp petanque))

(executable
 (name pet)
 (public_name pet)
 (modules pet)
 (libraries petanque_json))

(executable
 (name server)
 (public_name pet-server)
 (modules server)
 (optional)
 (libraries logs.lwt lwt.unix petanque_json))
