(library
 (name petanque_shell)
 (public_name coq-lsp.petanque.json_shell)
 (modules :standard \ pet server)
 (preprocess
  (staged_pps ppx_import ppx_deriving_yojson))
 (libraries petanque petanque_json))

(executable
 (name pet)
 (public_name pet)
 (modules pet)
 (libraries petanque_shell))

(executable
 (name server)
 (public_name pet-server)
 (modules server)
 (optional)
 (libraries logs.lwt lwt.unix petanque_shell))
