(test
 (name basic_api)
 (modules basic_api)
 (deps test.v)
 (libraries petanque))

(test
 (name json_api)
 (modules json_api)
 (deps test.v %{bin:pet})
 (enabled_if
  (<> %{os_type} "Win32"))
 (libraries petanque petanque_json lsp))

(test
 (name json_api_failure)
 (modules json_api_failure)
 (deps test.v %{bin:pet})
 (enabled_if
  (<> %{os_type} "Win32"))
 (libraries petanque petanque_json lsp))
