(library
 (name serlib_ltac2_ltac1)
 (public_name coq-lsp.serlib.ltac2_ltac1)
 (synopsis "Serialization Library for Coq Ltac2_ltac1 Plugin")
 (preprocess
  (staged_pps
   ppx_import
   ppx_sexp_conv
   ppx_deriving_yojson
   ppx_hash
   ppx_compare))
 (libraries coq-core.plugins.ltac2_ltac1 serlib sexplib serlib_ltac2))
