(library
 (name serlib_number_string_notation_plugin)
 (public_name coq-lsp.serlib.number_string_notation)
 (synopsis "Serialization Library for Coq Number and String Syntax Plugin")
 (preprocess
  (staged_pps
   ppx_import
   ppx_sexp_conv
   ppx_deriving_yojson
   ppx_hash
   ppx_compare))
 (libraries coq-core.plugins.number_string_notation serlib sexplib))
